[package]
name = "gen-vec"
version = "0.3.0"
authors = ["Earl Kennedy"]
edition = "2018"
license = "MIT"
description = "Vector indexed with generational indices"
readme = "README.md"
repository = "https://github.com/Mnenmenth/gen-vec-rs"
categories = ["data-structures", "memory-management", "game-development"]
keywords = ["gen-vec", "generational", "vector", "ecs"]

[badges]
travis-ci = { repository = "Mnenmenth/gen-vec-rs" }

[dependencies]
serde = { version = "1.0.114", optional = true, features = ["derive"] }